[project]
name = "link-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "redis>=7.4.0",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
